        removing the need for the VerboseSecurity product.  See the
        documentation for the "verbose-security" option in zope.conf.

      - "TemporaryStorage" (the storage that is used mainly to back the
        default sessioning database) is now MVCC capable, which essentially
        means that its usage will no longer generate ZODB ReadConflictErrors.

    Bugs Fixed

      - Collector #1812: Fixed key error in ZSQL ZMI/Test

      - Fixed CMFBTreeFolder for CMF 1.5+

      - WebDAV COPY and MOVE did not call '_notifyOfCopyTo' and '_postCopy'
        hooks like it was done in OFS.CopySupport. Additionally added
        'manage_changeOwnershipType' to make MOVE behave even closer to
        OFS.CopySupport.

      - Collector #1548: Fix 'httplib' usage in ZPublisher.Client.

      - Collector #1808: manage_convertIndexes no longer tries to change the
        index types causing some trouble with CMF.

      - manage_convertIndexes did not treat DateRangeIndexes and PathIndexes 
        properly.

  Zope 2.8.0 (2005/06/11)

    Bugs Fixed

      - Collector #1792: applied patch for broken ZClasses

      - doc/FAQ.txt updated: should bear some resemblance to reality now.
        (PCGI stuff removed; error information updated; PID information
        updated; upgrade procedure added; some common version questions added.)

      - Collector #1770: Fixed RestructuredText subtitle

      - Collector #1803: Fixed InitializeClass for some corner case.

      - Collector #1798, issue 1: ZopeTestCase no longer tries to 
        install products that were installed by Zope during startup.

      - Collector #1799: Avoid lying about parent's refcount when
        calling back into Python code.

      - Collector #889:  made 'and' operator for KeywordIndexes actually
        restrict results as expected (thanks to 'aroda' for the patch!).

      - Collector #1323: applied patch to fix umask problem in zdctl
